pitrezor now use sdl2

--- a/Makefile.include
+++ b/Makefile.include
@@ -99,8 +99,9 @@ ifeq ($(HEADLESS),1)
 CFLAGS   += -DHEADLESS=1
 else
 CFLAGS   += -DHEADLESS=0
-CFLAGS   += $(shell pkg-config --cflags sdl)
-LDLIBS   += $(shell pkg-config --libs sdl)
+
+CFLAGS   += $(shell pkg-config --cflags sdl2)
+LDLIBS   += $(shell pkg-config --libs sdl2)
 endif
 
 ifdef PIZERO
